<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UWMSA</string>
    <string name="action_main_logout">Logout</string>
    <string name="title_activity_login">Log In</string>
    <string name="usernameText_title">Username</string>
    <string name="passwordText_title">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="confirmPasswordText_title">Confirm password</string>
    <string name="uwStudentIdText_Title">UW Student Id (optional)</string>
    <string name="emailAddress_Title">Email Address</string>
    <string name="signupButton_Title">Sign up</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="forgotPasswordButton_Title"><u>Forgot your password?</u></string>
    <string name="forgotPassword_submitTitle"><u>Submit</u></string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Events</string>
    <string name="title_section3">Prayer Locations</string>
    <string name="title_section4">Halal Food Finder</string>
    <string name="title_section5">Participate</string>
    <string name="title_section6">Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example Action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forgot_password">Reset your Password</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Event Details Activity Strings -->
    <string name="ed_venue_name">VENUE NAME</string>
    <string name="ed_ticket_price">TICKET PRICE</string>
    <string name="ed_more_info_title">ABOUT</string>

    <string name="hello_world">Hello world!</string>

    <!-- Default fragment message -->
    <string name="feature_not_available">Sorry, but this feature is currently unavailable. We are working hard to bring it to you.</string>
    <string name="title_activity_maps">Map</string>

</resources>
