<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:backgroundTint="@color/abc_primary_text_material_dark"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.uwmsa.msandbox.Activities.LoginActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_centerHorizontal="true">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_logoImageView"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/logo"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/login_usernameTextField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:hint="@string/usernameText_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:singleLine="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_logoImageView"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/login_passwordTextField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/passwordText_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/login_usernameTextField"
                android:layout_alignLeft="@+id/login_usernameTextField"
                android:layout_alignStart="@+id/login_usernameTextField"
                android:inputType="textPassword"
                android:shadowColor="#4B9D8F"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:id="@+id/LinearLayoutButtons"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_below="@id/login_passwordTextField"
                android:layout_marginTop="40dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginButtonText"
                    android:id="@+id/login_loginButton"
                    android:layout_weight="1"
                    android:background="#4B9D8F"
                    android:textColor="#ffffff"
                    />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signupButton_Title"
                    android:background="#4B9D8F"
                    android:id="@+id/login_signUpButton"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="#ffffff"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/login_forgotPasswordButton"
                android:text="@string/forgotPasswordButton_Title"
                android:layout_below="@id/LinearLayoutButtons"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </ScrollView>




</RelativeLayout>
